# HW_19.2_Alexander_Tikhonov

./: README.md  pyproject.toml
config/: settings.py
newapp/: urls.py  views.py
