[tool.poetry]
name = "hw-19-2-alexander-tikhonov"
version = "0.1.0"
description = ""
authors = ["Alexander_Tikhonov"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
